k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cineops-ingress
  namespace: cineops
spec:
  ingressClassName: nginx

  tls:
  - hosts:
    - cineops.local
    - auth.cineops.local
    secretName: tls-secret

  rules: 
  - host: cineops.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 3000

  - host: auth.cineops.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-service
            port:
              number: 8080
